fixed newsletter button on mobile view from blocking navigation

--- a/final/styles/larger.css
+++ b/final/styles/larger.css
@@ -66,4 +66,8 @@
     .index {
         grid-template-columns: 1fr 1fr;
     }
+    .subscribe {
+        top: 8rem;
+        left: 4rem;
+    }
 }
