--- a/final/styles/nutrimate.css
+++ b/final/styles/nutrimate.css
@@ -154,7 +154,7 @@ main {
     padding: 10px;
     text-decoration: none;
     font-weight: bold;
-    top: 8rem;
+    top: 30rem;
     left: 4rem;
 }
 
